# ftdi-d2xx

./: .gitignore  CHANGELOG.md  CMakeLists.txt  README.md  main.d.ts  main.js  main.mjs  package-lock.json  package.json  test-debug.js  test-release.js  test.js  test.mjs  tsconfig.json
.github/workflows/: build-release.yml
docs/: FTDI_Device.md  FTDI_DeviceInfo.md  Home.md  _Sidebar.md
inc/: constants.h  error_check.h  module_data.h  utils.h
inc/api/: Device.h  FTDI_Device.h  FTDI_DeviceInfo.h  FTDI_Device_close.h  FTDI_Device_eraseEE.h  FTDI_Device_getters.h  FTDI_Device_purge.h  FTDI_Device_read.h  FTDI_Device_readEE.h  FTDI_Device_setBaudRate.h  FTDI_Device_setBitMode.h  FTDI_Device_setClrDtrRts.h  FTDI_Device_setDataCharacteristics.h  FTDI_Device_setFlowControl.h  FTDI_Device_setLatencyTimer.h  FTDI_Device_setTimeouts.h  FTDI_Device_simpleFunctions.h  FTDI_Device_write.h  FTDI_Device_writeEE.h  getDeviceInfoList.h  getVIDPID.h  listDevices.h  openDevice.h  setVIDPID.h
lib/Windows/arm64/: ftd2xx.lib
src/: constants.c  error_check.c  main.c  module_data.c  utils.c
src/api/: Device.c  FTDI_Device.c  FTDI_DeviceInfo.c  FTDI_Device_close.c  FTDI_Device_eraseEE.c  FTDI_Device_getters.c  FTDI_Device_purge.c  FTDI_Device_read.c  FTDI_Device_readEE.c  FTDI_Device_setBaudRate.c  FTDI_Device_setBitMode.c  FTDI_Device_setClrDtrRts.c  FTDI_Device_setDataCharacteristics.c  FTDI_Device_setFlowControl.c  FTDI_Device_setLatencyTimer.c  FTDI_Device_setTimeouts.c  FTDI_Device_setUSBParameters.c  FTDI_Device_simpleFunctions.c  FTDI_Device_write.c  FTDI_Device_writeEE.c  getDeviceInfoList.c  getVIDPID.c  listDevices.c  openDevice.c  setVIDPID.c
